# ChangeLog for media-sound/mpc
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mpc/ChangeLog,v 1.29 2005/10/16 23:26:38 ticho Exp $

*mpc-0.11.2-r1 (16 Oct 2005)

  16 Oct 2005; Andrej Kacian <ticho@gentoo.org> +mpc-0.11.2-r1.ebuild:
  Added nls USE flag to the ebuild and --disable-dependency-tracking to econf.
  Closes bug #108822, reported by Natanael Copa <natanael.copa at gmail.com>.

  22 May 2005; Guy Martin <gmsoft@gentoo.org> mpc-0.11.2.ebuild:
  Stable on hppa.

  01 May 2005; Michael Hanselmann <hansmi@gentoo.org> mpc-0.11.2.ebuild:
  Stable on ppc.

*mpc-0.11.2 (12 Mar 2005)

  12 Mar 2005; Thomas Matthijs <axxo@gentoo.org> +mpc-0.11.2.ebuild:
  version bump

  11 Feb 2005; Thomas Matthijs <axxo@gentoo.org> mpc-0.11.1.ebuild:
  enable bash completing w/ bash-completion-config

  19 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org> -mpc-0.10.3.ebuild,
  -mpc-0.11.0.ebuild, -mpc-0.9.2.ebuild:
  Removing old versions.

  03 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> mpc-0.11.1.ebuild:
  Stable amd64, sparc, x86.

  12 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> mpc-0.11.1.ebuild:
  ~sparc ~amd64

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> mpc-0.10.3.ebuild,
  mpc-0.11.0.ebuild, mpc-0.11.1.ebuild, mpc-0.9.2.ebuild:
  virtual/glibc -> virtual/libc

*mpc-0.11.1 (27 Jun 2004)

  27 Jun 2004; Martin Holzer <mholzer@gentoo.org> mpc-0.11.1.ebuild:
  Version bumped.

  27 Jun 2004; David Holm <dholm@gentoo.org> mpc-0.11.0.ebuild:
  Added to ~ppc.

*mpc-0.11.0 (26 Jun 2004)

  26 Jun 2004; Martin Holzer <mholzer@gentoo.org> mpc-0.11.0.ebuild:
  Version bumped.

  25 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> mpc-0.10.2.ebuild,
  mpc-0.10.3.ebuild:
  Stable x86.  Removing old ebuild.

  14 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> mpc-0.10.0.ebuild,
  mpc-0.10.1.ebuild:
  Removing old ebuilds.

*mpc-0.10.3 (03 Apr 2004)
